# project

./: .dockerignore  .env.schema  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-publish.yml  ci.yaml  trigger-jenkins.yml
migrations/: alembic.ini  env.py
migrations/scripts/: 01_create_project_schema.sql
migrations/versions/: 0001_add_project_model.py  0002_add_resource_request_model.py  0003_add_workbench_model.py  0004_update_project_model.py  0005_add_default_to_workbenches_deployed_at.py  0006_update_resource_requests.py  0006_update_resource_requests_model.py
project/: __main__.py  app.py  config.py  start.py
project/components/: __init__.py  crud.py  db_model.py  exceptions.py  filtering.py  models.py  pagination.py  parameters.py  schemas.py  sorting.py
project/components/health/: __init__.py  db_checker.py  dependencies.py  views.py
project/components/project/: __init__.py  crud.py  dependencies.py  filtering.py  logo_uploader.py  models.py  parameters.py  schemas.py  views.py
project/components/resource_request/: __init__.py  crud.py  dependencies.py  models.py  parameters.py  schemas.py  sorting.py  views.py
project/components/workbench/: __init__.py  crud.py  dependencies.py  filtering.py  models.py  parameters.py  schemas.py  views.py
project/dependencies/: __init__.py  db.py  parameters.py  s3.py
tests/: conftest.py
tests/components/: test_filtering.py  test_models.py  test_parameters.py  test_sorting.py  test_types.py
tests/components/health/: test_views.py
tests/components/project/: test_logo_uploader.py  test_schemas.py  test_views.py
tests/components/resource_request/: test_views.py
tests/components/workbench/: test_views.py
tests/dependencies/: test_db.py
tests/fixtures/: app.py  db.py  fake.py  s3.py
tests/fixtures/components/: _base_factory.py  project.py  resource_request.py  workbench.py
